--- a/app/views/panel/_factory_nav.html.erb
+++ b/app/views/panel/_factory_nav.html.erb
@@ -1,9 +1,7 @@
 <div class="menu-list">
   <%= link_to({ controller: 'factory/panel/home' }, text: true, data: { turbo_frame: 'body', action: 'menu#enter' }, class: 'menu-item') do %>
-    <div>
-      <i class="fa-solid fa-fw fa-store"></i>
-      <span><%= t('factory.panel.title') %></span>
-    </div>
+    <i class="fa-solid fa-fw fa-store"></i>
+    <strong><%= t('factory.panel.title') %></strong>
   <% end %>
   <div class="pl-4">
     <%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory/panel/factory_taxons' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: ['factory_taxons', 'factory_providers'], item: 'menu-item', active: 'menu-item is-active') %>
